<resources>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">随身课表</string>
    <string name="app_name">重大课表通</string>
    <string name="strInputAccHint">输入学号</string>
    <string name="strAccInputLabel">学号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="opt_remember">记住密码</string>
    <string name="login">登 录</string>
    <string name="splash">随身课表装载中</string>
    <string name="classtable_activity_title">格式一</string>
    <string name="iniweek">第 * 周</string>
    <string name="beforenoon">上  午</string>
    <string name="afternoon">下  午</string>
    <string name="night">晚  上</string>
    <string name="one">0102节</string>
    <string name="two">0304节</string>
    <string name="three">0506节</string>
    <string name="four">0708节</string>
    <string name="five">0910节</string>
    <string name="six">1112节</string>
    <string name="jumpdialogtip1">请输入周次</string>
    <string name="jumpdialogtip2">请输入星期</string>
    <string name="aboutcompany">****Android精英工作室****
                                    重庆大学科研创新计划（SRTP）</string>
    <string name="aboutauthor"></string>
    <string name="ininfo">随时随地    把握最新课表</string>
    <string name="format02">格式二</string>
    <string name="netconnecting">连接网络中,请稍后...</string>
    <string name="connecting">获取教务网数据</string>
    <string name="classinfoview">查看课程详细信息</string>
    <string name="classinfoedit">编辑课程信息</string>
    <string name="classinfoview_coursetip">课程信息</string>
    <string name="classinfoview_homework">作业</string>
    <string name="classinfoview_learned">学习小计</string>
    <string name="general_login">登录</string>
    <string name="general_register">快速注册</string>
    <string name="general_back">返回</string>
    <string name="general_cancle">取消</string>
    <string name="general_finish">完成</string>
    <string name="general_edit">编辑</string>
    <string name="general_tip">提示</string>
    <string name="general_obtain">获取</string>
    <string name="general_save">保存</string>
    <string name="general_confirm">确定</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="agree">我同意</string>
    <string name="disagree">不同意</string>
    <string name="general_ignore">忽略</string>
    <string name="general_set">设置</string>
    <string name="general_refresh">刷新</string>
    <string name="general_knowed">我知道了</string>
    <string name="init_login">登 录</string>
    <string name="init_register">快速注册</string>
    <string name="init_login_tip">使用您的邮箱登录</string>
    <string name="init_register_tip">第一次使用需要创建您的超级课程表账户</string>
    <string name="help_enter">点我进入体验吧!</string>
    <string name="menu_userInfo">个人资料</string>
    <string name="menu_course">我的课表</string>
    <string name="menu_paper">我的纸条</string>
    <string name="menu_homework">作业中心</string>
    <string name="menu_message">消息中心</string>
    <string name="menu_set_course_info">课程表设置</string>
    <string name="menu_setting">系统设置</string>
    <string name="menu_logout">注销</string>
    <string name="menu_exit">退出软件</string>
    <string name="user_login_account">邮箱</string>
    <string name="user_login_account_tips">请输入您的邮箱地址</string>
    <string name="user_login_password">密码</string>
    <string name="user_login_password_tips">请输入您的密码</string>
    <string name="user_login_forgetPassword">忘记密码?</string>
    <string name="user_register_school">学校</string>
    <string name="user_register_school_tips">请输入您的学校全称</string>
    <string name="user_register_account">邮箱</string>
    <string name="user_register_account_tips">请使用您的常用邮箱</string>
    <string name="user_register_password">密码</string>
    <string name="user_register_password_tips">只能数字或英文字母</string>
    <string name="user_register_confirm_password">确认密码</string>
    <string name="user_register_confirm_password_tips">再次输入密码</string>
    <string name="resetPassword_title">重置密码</string>
    <string name="set_student_info_title">获取课程表</string>
    <string name="set_student_info_get_course">获取课程表</string>
    <string name="set_student_info_academy">院系选择</string>
    <string name="set_student_info_academy_hint">点击选择 院系</string>
    <string name="set_student_info_grade">年级</string>
    <string name="set_student_info_grade_hint">点击选择 年级</string>
    <string name="set_student_info_student_account">帐号</string>
    <string name="set_student_info_student_account_tip">教务系统帐号</string>
    <string name="set_student_info_student_password">密码</string>
    <string name="set_student_info_student_password_tip">请输入您的密码</string>
    <string name="set_student_info_tip">"获取课程表需要填写您学校的
教务(选课)系统的用户名、密码"</string>
    <string name="set_student_info_remember_password">记住密码到本地</string>
    <string name="set_student_info_treaty_content">　　因为手机屏幕小，2G网速慢，导致很多同学在手机浏览器上访问教务系统非常麻烦。超级课程表的工作原理是软件内置了一款更适合访问教务系统的小型浏览器，通过它来简化大家查看课程表的流程。这个过程跟您用手机自带的浏览器访问教务系统的原理一样，并不是利用每个学校教务系统的漏洞，不会记录同学们的账号密码信息，可以放心使用。</string>
    <string name="handle_treaty_content">　　与其它课程表软件不同，超级课程表能让同学之间进行课程分享，从而快速、便捷地手动创建课程。只要长按课程表中的格子，即可搜索到其它同学创建好的课程信息，并添加到个人课程表中。</string>
    <string name="main_course_title">我的课表</string>
    <string name="main_course_school_friends">校友</string>
    <string name="main_course_mydata">个人资料</string>
    <string name="main_course_setting">设置</string>
    <string name="main_course_courseTime_txt">时间：</string>
    <string name="main_course_courseTime_txt_tip">(长按设置时间)</string>
    <string name="main_course_classroom_txt">教室：</string>
    <string name="main_course_week_txt">周数：</string>
    <string name="main_course_monday">一</string>
    <string name="main_course_tuesday">二</string>
    <string name="main_course_wednesday">三</string>
    <string name="main_course_thursday">四</string>
    <string name="main_course_friday">五</string>
    <string name="main_course_Saturday">六</string>
    <string name="main_course_Sunday">日</string>
    <string name="main_course_auto_getcourse">自动获取</string>
    <string name="main_course_hand_getcourse">手动创建</string>
    <string name="main_course_promptSchoolInfo">"请选择 
从学校教务(选课)系统导入课表 
或者 手动创建课程表"</string>
    <string name="main_course_getCourse">重新获取课程表</string>
    <string name="main_course_promptGetCourse">"获取课程表失败，点击下面按钮
再试一次吧!"</string>
    <string name="main_course_more_classroom">教室：</string>
    <string name="main_course_more_teacher">任课教师：</string>
    <string name="user_data_title">个人资料</string>
    <string name="user_data_nickName">昵称</string>
    <string name="user_data_signature">个性签名</string>
    <string name="user_data_signature_default">这家伙什么都没留下~~~</string>
    <string name="user_data_gender">性别</string>
    <string name="user_data_loveState">恋爱状态</string>
    <string name="user_data_label">我的标签</string>
    <string name="user_data_realName">真实姓名</string>
    <string name="user_data_grade">年级</string>
    <string name="user_data_academyName">院系</string>
    <string name="user_data_weibo_binding">新浪微博</string>
    <string name="user_data_weibo_binding_yes">已经绑定新浪微博，点击查看</string>
    <string name="user_data_weibo_binding_no">该用户暂未绑定新浪微博</string>
    <string name="mine_data_weibo_binding_yes">已绑定新浪微博，点击取消绑定</string>
    <string name="mine_data_weibo_binding_no">未绑定新浪微博，点击绑定</string>
    <string name="edit_data_title">编辑资料</string>
    <string name="edit_data_nickName_hint">昵称只能八个字哦</string>
    <string name="edit_data_signature_hint">一句话描述自己</string>
    <string name="edit_data_realName_hint">输入您的真实姓名</string>
    <string name="edit_data_loveState_hint">点击选择恋爱状态</string>
    <string name="edit_data_add_label">添加标签</string>
    <string name="edit_data_new_label_tip">添加新标签</string>
    <string name="user_data_nonPhoto">你还没上传头像，上传自己的真实头像让更多的同学找到你吧！</string>
    <string name="edit_label_title">编辑标签</string>
    <string name="edit_label_have_label">我已添加的标签：</string>
    <string name="edit_label_new_label">新标签：</string>
    <string name="edit_label_new_label_tip">添加新标签，可以用逗号或回车分割</string>
    <string name="edit_label_btn_add_label">确认添加</string>
    <string name="weibo_auth_title">绑定微博</string>
    <string name="weibo_data_userName_defaul">个人资料</string>
    <string name="weibo_data_follow">关注</string>
    <string name="weibo_data_friend">粉丝</string>
    <string name="weibo_data_statuses">微博</string>
    <string name="weibo_data_intro">简介</string>
    <string name="mypaper_title">我的纸条</string>
    <string name="assignment_center">作业中心</string>
    <string name="detail_course_title">课程名</string>
    <string name="detail_course_table_assignment">记 作 业</string>
    <string name="detail_course_table_topic">灌 水 本</string>
    <string name="detail_course_table_classmate">课堂随记</string>
    <string name="detail_course_table_course_info">课程信息</string>
    <string name="assignment_btn_newAssignment">我要记作业</string>
    <string name="assignment_btn_toShare">去收藏</string>
    <string name="topic_btn_newTopic">发点新鲜事</string>
    <string name="topic_default_text">老师作业多？课堂糗事？遇到问题一个人解决不了？快发上来分享下吧！</string>
    <string name="classmate_courseName_txt">课程名称：</string>
    <string name="classmate_courseTime_txt">上课时间：</string>
    <string name="classmate_courseTime_txt_tip">(请点击编辑按钮设置时间)</string>
    <string name="classmate_classroom_txt">教　　室：</string>
    <string name="classmate_week_txt">上课周数：</string>
    <string name="classmate_teacher_txt">任课教师：</string>
    <string name="classmate_other_info_txt">其它信息：</string>
    <string name="classmate_text">同班同学：</string>
    <string name="course_info_evaluated">课程评价：</string>
    <string name="classmate_list_title">同学列表</string>
    <string name="topic_new_title">发点新鲜事</string>
    <string name="topic_new_isAnonymity">匿名发布</string>
    <string name="topic_new_edt_hint">老师作业多？课堂糗事？遇到问题一个人解决不了？</string>
    <string name="topic_reply_title">话题</string>
    <string name="topic_reply_btn_reply">回复</string>
    <string name="reply_topic_title_text">回复话题</string>
    <string name="reply_reply_title_text">回复评论</string>
    <string name="reply_reply_content_hint">回复内容</string>
    <string name="write_assignment">记作业</string>
    <string name="write_assignment_title">标题</string>
    <string name="write_assignment_title_tip">输入作业标题</string>
    <string name="write_assignment_content_tip">作业内容</string>
    <string name="write_assignment_setTime">提交时间</string>
    <string name="write_assignment_course">所属科目</string>
    <string name="copy_assignment_title">收藏作业</string>
    <string name="message_center_title">消息中心</string>
    <string name="message_center_myPaper">我的纸条</string>
    <string name="message_center_newStudent">新 同 学</string>
    <string name="message_center_collect_assignment">收藏作业</string>
    <string name="message_center_topic_reply">话题回复</string>
    <string name="msg_topic_reply_default_text">"他人对你的评论和对话会出现在这里
快去课堂发条新鲜事吧！"</string>
    <string name="new_student_same_course_title">同节课程列表</string>
    <string name="new_student_same_course_count">同节课程列表</string>
    <string name="paper_chat_btn_send">扔纸条</string>
    <string name="paper_chat">传纸条</string>
    <string name="paper_chat_fail">发送失败</string>
    <string name="setting_title">设置</string>
    <string name="setting_course">课程/周数/学期设置</string>
    <string name="setting_remind">消息提醒</string>
    <string name="setting_remind_type">提醒内容</string>
    <string name="setting_checkUpdate">升级到新版本</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_refresh_course">从教务系统导入课表</string>
    <string name="setting_wipe_cache">清除缓存</string>
    <string name="setting_logout">注销登录</string>
    <string name="notification_remind">开启通知栏提醒</string>
    <string name="sound_remind">开启声音提醒</string>
    <string name="vibrate_remind">开启振动提醒</string>
    <string name="off_line_remind">接收后台消息</string>
    <string name="remind_type">提醒内容</string>
    <string name="task_homework_tip_txt">作业</string>
    <string name="task_homework_content_edit">在此您可以记录好作业内容</string>
    <string name="task_learn_tip_txt">课程备忘</string>
    <string name="task_learn_content_edit">在此您可以记录课堂上的心得体会</string>
</resources>